check_radius.txt
warning: unused import: `std::f32::consts::PI`
   --> astraweave-materials\src\lib.rs:619:13
    |
619 |         use std::f32::consts::PI;
    |             ^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(unused_imports)]` on by default

warning: variable does not need to be mutable
   --> astraweave-materials\src\lib.rs:468:13
    |
468 |         let mut metallic_roughness = vec![[0.0f32, 0.5, 0.0, 1.0]; total_pixels];
    |             ----^^^^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: `astraweave-materials` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-materials` to apply 2 suggestions)
warning: unused import: `VoxelChunk`
  --> astraweave-terrain\src\terrain_modifier.rs:20:32
   |
20 | use crate::{ChunkCoord, Voxel, VoxelChunk, VoxelGrid};
   |                                ^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `HashMap`
  --> astraweave-terrain\src\terrain_modifier.rs:22:24
   |
22 | use std::collections::{HashMap, HashSet, VecDeque};
   |                        ^^^^^^^

warning: `astraweave-terrain` (lib) generated 2 warnings (run `cargo fix --lib -p astraweave-terrain` to apply 2 suggestions)
    Checking astraweave-render v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\astraweave-render)
error[E0599]: no associated item named `MAGENTA` found for struct `wgpu::Color` in the current scope
   --> astraweave-render\src\environment.rs:467:60
    |
467 |                     load: wgpu::LoadOp::Clear(wgpu::Color::MAGENTA), // Debug color to see if skybox fails
    |                                                            ^^^^^^^ associated item not found in `wgpu::Color`

warning: variable does not need to be mutable
   --> astraweave-render\src\gpu_memory.rs:136:13
    |
136 |         let mut mgr = Self::new();
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0599`.
warning: `astraweave-render` (lib) generated 1 warning
error: could not compile `astraweave-render` (lib) due to 1 previous error; 1 warning emitted
